# Project_OpenGL

./: .gitignore  CMakeLists.txt  CODEBASE_OVERVIEW.md  GameLogic.md  README.md
includes/learnopengl/: mesh.h  model.h
resources/: config.json
src/: assets.cpp  assets.h  game.cpp  game.h  graphics.cpp  graphics.h  main.cpp  math.cpp  math.h
